tests/semantic_errors/andrei20_3.tl
require "ifj21"

global name : function (integer)
function name    (a : number)
    local id : nil
    local id1 : nil

    if 1 then
        local id1 : string = "AV"
        if id1 then
            id = nil
            local id1 : number
        else
            local id : integer = 12
            id1 = "AC
            local a : number
        end
    else end

end

function main()
end

main()
